[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "pingintel-api"
dynamic = ["version", "dependencies"]
authors = [
  { name="Scott Stafford", email="scott@pingintel.com" },
]
description = "Python-based client to Ping Data Intelligence APIs"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pingintel/pingintel-api"
Issues = "https://github.com/pingintel/pingintel-api/issues"

[tool.hatch.version]
path = "src/pingintel_api/__about__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.scripts]
sovfixerapi = "pingintel_api.sovfixerapi_cmd:main"
pingradarapi = "pingintel_api.pingradarapi_cmd:main"